# StockTrader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: model.json
model/: neuralNet.cpp  neuralNet.h
pythonProject/: Mnist.py  buyer_and_seller.py  data.py  main.py  methods.py  nasdaq.csv  neuralNet.py  neuralNetOutput.py  neural_net.py  nmist_model.h5  pastData.py  prediction.py  stock.py  stocks_to_remove.txt  test.py
pythonProject/data/: model.h5  model.json  nasdaq.csv  tech.csv  techDataO.csv  techDataV.csv
pythonProject/getData/: currentData.py  current_data.py  pastData.py  past_data.py
